--- a/app/css/common.css
+++ b/app/css/common.css
@@ -562,7 +562,7 @@ a.expand.on:after {
 }
 
 #search {
-	display: none;
+	/*display: none;*/
 	width: 100%;
 	height: 50px;
 	position: fixed;
@@ -688,7 +688,7 @@ a.expand.on:after {
 	left: 6px;
 	top: 0;
 	height: 26px;
-	width: 20px;
+	width: 30px;
 	margin: 5px 0;
 	padding-right: 8px;
 	background: url(//static0.qianqian.com/web/st/img/sprite/ui-header-618.png) no-repeat -101px -48px;
@@ -701,7 +701,7 @@ a.expand.on:after {
 	right: 10px;
 	top: 0;
 	height: 26px;
-	width: 28px;
+	width: 45px;
 	margin: 5px 0;
 	padding-left: 8px;
 	border-left: 1px solid #C3C3C3;
