--- a/app/css/common.css
+++ b/app/css/common.css
@@ -1,7 +1,8 @@
 html {
 	font-family: sans-serif;
 	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%
+	-webkit-text-size-adjust: 100%;
+	font-size: 62.5%!important;
 }
 
 body {
